--- a/frontend/res/styles/container.less
+++ b/frontend/res/styles/container.less
@@ -13,6 +13,10 @@ body {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 #sidebar {
   width: 300px;
   background-color: #023b53;
@@ -57,4 +61,9 @@ body {
   flex: 1;
   padding: 20px 30px;
   overflow-y: scroll;
+
+  .loading {
+    text-align: center;
+    margin-top: 100px;
+  }
 }
