Update: view loader and market view

--- a/frontend/res/styles/market.less
+++ b/frontend/res/styles/market.less
@@ -1,4 +1,7 @@
 #view_market {
+  width: 1200px;
+  margin: 20px auto;
+
   .header {
     display: flex;
 
@@ -9,7 +12,7 @@
   }
 
   .progress {
-    margin-top: 10px;
+    margin-top: 20px;
     height: 24px;
     display: flex;
 
@@ -18,5 +21,9 @@
       flex: 1;
       min-width: 100px;
     }
+  }
+
+  h3 {
+    margin: 0;
   }
 }
