--- a/frontend/res/styles/container2.css
+++ b/frontend/res/styles/container2.css
@@ -1,5 +1,5 @@
 @import '../bootstrap/css/bootstrap.min.css';
-@import '../bootstrap/css/font-awesome.min.css';
+@import '../bootstrap/css/materialdesignicons.min.css';
 body {
   font-family: "Pingfang SC", "Source Han Sans SC", "Microsoft Yahei", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -39,26 +39,7 @@ header > div:nth-child(2) li a.act,
 header > div:nth-child(2) li a:hover {
   color: whitesmoke;
 }
-.home {
-  background: url("../images/home.png") no-repeat;
-  background-size: 100%;
+#container .loading {
+  margin-top: 50px;
   text-align: center;
-  padding: 100px 0;
-}
-.home h1 {
-  margin: 0;
-  color: whitesmoke;
-  font-size: 42px;
-}
-.home h2 {
-  margin: 20px 0 0 0;
-  color: whitesmoke;
-  font-size: 28px;
-  font-weight: normal;
-}
-.home button {
-  margin: 50px 0 0 0;
-  padding: 10px 30px;
-  font-size: 20px;
-  font-weight: 300;
 }
