--- a/frontend/res/styles/container2.less
+++ b/frontend/res/styles/container2.less
@@ -1,6 +1,6 @@
 @import '../bootstrap/css/bootstrap.min.css';
 // @import '../bootstrap/css/bootstrap-theme.min.css';
-@import '../bootstrap/css/font-awesome.min.css';
+@import '../bootstrap/css/materialdesignicons.min.css';
 
 body {
   font-family: "Pingfang SC", "Source Han Sans SC", "Microsoft Yahei", Helvetica, Arial, sans-serif;
@@ -51,29 +51,9 @@ header {
   }
 }
 
-.home {
-  background: url("../images/home.png") no-repeat;
-  background-size: 100%;
-  text-align: center;
-  padding: 100px 0;
-
-  h1 {
-    margin: 0;
-    color: whitesmoke;
-    font-size: 42px;
-  }
-
-  h2 {
-    margin: 20px 0 0 0;
-    color: whitesmoke;
-    font-size: 28px;
-    font-weight: normal;
-  }
-
-  button {
-    margin: 50px 0 0 0;
-    padding: 10px 30px;
-    font-size: 20px;
-    font-weight: 300;
+#container {
+  .loading {
+    margin-top: 50px;
+    text-align: center;
   }
 }
