--- a/frontend/res/styles/market.css
+++ b/frontend/res/styles/market.css
@@ -1,3 +1,7 @@
+#view_market {
+  width: 1200px;
+  margin: 20px auto;
+}
 #view_market .header {
   display: flex;
 }
@@ -6,7 +10,7 @@
   margin: 0;
 }
 #view_market .progress {
-  margin-top: 10px;
+  margin-top: 20px;
   height: 24px;
   display: flex;
 }
@@ -14,4 +18,7 @@
   font-size: 14px;
   flex: 1;
   min-width: 100px;
+}
+#view_market h3 {
+  margin: 0;
 }
