--- a/frontend/res/views/market.html
+++ b/frontend/res/views/market.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h3>今日涨停 ({{ market.surged_limit.length }})</h3>
+            <h3><i class="mdi mdi-36px mdi-trending-up"></i> 今日涨停 ({{ market.surged_limit.length }})</h3>
             <table class="table">
                 <thead>
                 <tr>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="col-md-6">
-            <h3>今日跌停 ({{ market.decline_limit.length }})</h3>
+            <h3><i class="mdi mdi-36px mdi-trending-down"></i> 今日跌停 ({{ market.decline_limit.length }})</h3>
             <table class="table">
                 <thead>
                 <tr>
@@ -66,7 +66,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h3>上涨超 5% ({{ market.surged_over_five_per.length }})</h3>
+            <h3><i class="mdi mdi-36px mdi-trending-up"></i> 上涨超 5% ({{ market.surged_over_five_per.length }})</h3>
             <table class="table">
                 <thead>
                 <tr>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="col-md-6">
-            <h3>下跌超 -5% ({{ market.decline_over_five_per.length }})</h3>
+            <h3><i class="mdi mdi-36px mdi-trending-down"></i> 下跌超 -5% ({{ market.decline_over_five_per.length }})</h3>
             <table class="table">
                 <thead>
                 <tr>
