--- a/frontend/res/styles/market.less
+++ b/frontend/res/styles/market.less
@@ -9,6 +9,10 @@
       flex: 1;
       margin: 0;
     }
+
+    .datepicker {
+      margin-left: 10px;
+    }
   }
 
   .progress {
@@ -21,6 +25,11 @@
       flex: 1;
       min-width: 100px;
     }
+  }
+
+  #volume_chart {
+    width: 100%;
+    height: 300px;
   }
 
   h3 {
