--- a/frontend/res/views/market.html
+++ b/frontend/res/views/market.html
@@ -4,7 +4,7 @@
     <div class="header">
         <h1>市场温度计</h1>
         <div>
-            <i class="fa fa-calendar"></i> 日期选择
+            <i class="mdi mdi-18px mdi-calendar"></i> 日期选择
             <datepicker v-model="date" :disabled-days-of-Week="disabled_days" format="yyyy-MM-dd"></datepicker>
         </div>
     </div>
@@ -17,6 +17,12 @@
         </div>
         <div class="progress-bar progress-bar-success" v-bind:style="{ flex: market.declined }">
             下跌 ({{ market.declined }})
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h3><i class="mdi mdi-36px mdi-chart-line"></i> 近两周交易量趋势</h3>
+            <div id="volume_chart"></div>
         </div>
     </div>
     <div class="row">
@@ -113,10 +119,8 @@
 
 <script type="text/javascript">
     (function () {
+        Vue.component('datepicker', VueStrap.datepicker);
         var view_market = new Vue({
-            components: {
-                datepicker: VueStrap.datepicker,
-            },
             el: '#view_market',
             data: {
                 date: '',
@@ -139,6 +143,39 @@
             methods: {
                 code: app.utils.formatCode,
                 percent: app.utils.formatPercent
+            },
+            updated: function () {
+                var keys = [], values = [];
+                for (var key in this.market.volumes) {
+                    keys.push(key);
+                    values.push(this.market.volumes[key]);
+                }
+                echarts.init(this.$el.querySelector('#volume_chart')).setOption({
+                    xAxis: {
+                        data: keys,
+                        inverse: true
+                    },
+                    yAxis: {
+                        scale: true
+                    },
+                    tooltip: {
+                        trigger: 'axis'
+                    },
+                    toolbox: {
+                        show: true,
+                        feature: {
+                            dataZoom: {},
+                            magicType: {type: ['line', 'bar']},
+                            restore: {},
+                            saveAsImage: {}
+                        }
+                    },
+                    series: [{
+                        name: '交易量',
+                        type: 'line',
+                        data: values
+                    }]
+                });
             }
         });
         view_market.date = app.dates.max;
