--- a/frontend/res/views/market.html
+++ b/frontend/res/views/market.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="res/styles/market.css">
 
-<div id="view_market">
+<div id="view_market" class="fix-width">
     <div class="header">
         <h1>市场温度计</h1>
         <div>
