--- a/frontend/res/styles/container2.less
+++ b/frontend/res/styles/container2.less
@@ -21,6 +21,8 @@ body {
 @media all and (max-width: 1200px) {
   .fix-width {
     width: 100%;
+    margin-left: 10px;
+    margin-left: 10px;
   }
 }
 
