--- a/frontend/res/styles/market.css
+++ b/frontend/res/styles/market.css
@@ -27,4 +27,8 @@
 }
 #view_market h3 {
   margin: 0;
+  display: inline-block;
+  padding: 0 5px 5px 0;
+  border-bottom: 2px solid #3d77c7;
+  color: #3d77c7;
 }
