--- a/frontend/res/styles/market.less
+++ b/frontend/res/styles/market.less
@@ -33,5 +33,9 @@
 
   h3 {
     margin: 0;
+    display: inline-block;
+    padding: 0 5px 5px 0;
+    border-bottom: 2px solid #3d77c7;
+    color: #3d77c7;
   }
 }
