--- a/frontend/res/styles/stocklist.less
+++ b/frontend/res/styles/stocklist.less
@@ -13,4 +13,16 @@
       margin-left: 10px;
     }
   }
+
+  table {
+    margin-top: 10px;
+
+    .red {
+      color: #db5542;
+    }
+
+    .green {
+      color: #53b37b;
+    }
+  }
 }
