--- a/frontend/res/views/home.html
+++ b/frontend/res/views/home.html
@@ -3,7 +3,7 @@
 <div class="home">
     <h1>非专业股票分析系统</h1>
     <h2>我也不知道这里写啥，我也不知道这里写啥</h2>
-    <button type="button" class="btn btn-danger" onclick="app.loadView('market');">
+    <button type="button" class="btn btn-danger" onclick="app.views.load('market');">
         开始你的摸鱼之旅
     </button>
 </div>
