Update: stock view and related

--- a/frontend/res/styles/container2.css
+++ b/frontend/res/styles/container2.css
@@ -1,9 +1,16 @@
 @import '../bootstrap/css/bootstrap.min.css';
+@import '../bootstrap/css/bootstrap-table.min.css';
 @import '../bootstrap/css/materialdesignicons.min.css';
+html,
+body {
+  height: 100%;
+}
 body {
   font-family: "Pingfang SC", "Source Han Sans SC", "Microsoft Yahei", Helvetica, Arial, sans-serif;
-  margin: 0;
   background-color: #f9f9f9;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 .hidden {
   display: none;
@@ -16,10 +23,12 @@ body {
 @media all and (max-width: 1200px) {
   .fix-width {
     width: 100%;
-    margin-left: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 header {
+  flex-shrink: 0;
   background-color: #023b53;
   height: 50px;
   display: flex;
@@ -50,7 +59,13 @@ header > div:nth-child(2) li a.act,
 header > div:nth-child(2) li a:hover {
   color: whitesmoke;
 }
+#container {
+  flex: 1;
+}
 #container .loading {
   margin-top: 50px;
   text-align: center;
+}
+#container #content {
+  height: 100%;
 }
