--- a/frontend/res/views/stock.html
+++ b/frontend/res/views/stock.html
@@ -1,53 +1,227 @@
-<div id="view_stock">
-    <div id="k_chart" style="width: 100%; height: 600px;"></div>
+<link rel="stylesheet" href="res/styles/stock.css">
+
+<div id="view_stock" class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 col-lg-9 stock_chart">
+            <div id="k_chart"></div>
+            <div id="chart_select">图表切换（Coming Soon）</div>
+        </div>
+        <div id="stock_info" class="col-md-4 col-lg-3">
+            <div class="name">
+                {{ name }}
+                <span class="code">({{ fcode(code) }})</span>
+            </div>
+            <div class="price" v-bind:class="{ red: rate > 0, green: rate < 0 }">
+                {{ close }}
+                <span v-if="rate >= 0" class="rate">
+                    ▲ {{ percent(rate) }}
+                </span>
+                <span v-else class="rate">
+                    ▼ {{ percent(rate) }}
+                </span>
+            </div>
+            <table class="table table-striped">
+                <tbody>
+                <tr>
+                    <td>昨收</td>
+                    <td>{{ last }}</td>
+                </tr>
+                <tr>
+                    <td>今开</td>
+                    <td>{{ open }}</td>
+                </tr>
+                <tr>
+                    <td>最高</td>
+                    <td>{{ high }}</td>
+                </tr>
+                <tr>
+                    <td>最低</td>
+                    <td>{{ low }}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
+    var stock_info = new Vue({
+        el: '#stock_info',
+        data: {
+            name: '',
+            code: 0,
+            close: 0,
+            open: 0,
+            high: 0,
+            low: 0,
+            last: 0,
+            rate: 0
+        },
+        methods: {
+            fcode: app.utils.formatCode,
+            percent: app.utils.formatPercent
+        }
+    });
+
+    var calcMA = function (data, days) {
+        var ma = [];
+        for (var i = 0; i < data.length; i++) {
+            if (i < days - 1) {
+                ma.push(null);
+            } else {
+                ma.push(
+                    data.slice(i - days + 1, i + 1).map(function (d) {
+                        return d[1];
+                    }).reduce(function (a, b) {
+                        return a + b;
+                    }) / days
+                );
+            }
+        }
+        return ma;
+    };
+
     setTimeout(function () {
         var chart = echarts.init(document.getElementById('k_chart'));
+        window.addEventListener('resize', function () {
+            chart.resize();
+        });
+
         chart.showLoading();
         var code = 1;
         if (app.views.param.code) {
             code = app.views.param.code;
         }
         $.getJSON('/api/stock/stock?code=' + code, function (result) {
+            stock_info.name = result.name;
+            stock_info.code = code;
+
             chart.setOption({
-                xAxis: {
-                    data: result.dates
-                },
-                yAxis: {
-                    scale: true
-                },
-                dataZoom: [
-                    {
-                        type: 'inside',
-                        start: 90,
-                        end: 100
+                baseOption: {
+                    animation: false,
+                    grid: [
+                        {
+                            right: 30,
+                            height: '60%'
+                        },
+                        {
+                            top: '75%',
+                            right: 30
+                        }
+                    ],
+                    xAxis: [
+                        {
+                            data: result.dates
+                        },
+                        {
+                            gridIndex: 1,
+                            axisLabel: {show: false},
+                            data: result.dates
+                        }
+                    ],
+                    yAxis: [
+                        {
+                            scale: true
+                        },
+                        {
+                            gridIndex: 1,
+                            scale: true
+                        }
+                    ],
+                    legend: {
+                        data: ['MA5', 'MA10', 'MA20', 'MA30', 'MA60']
                     },
-                    {
-                        show: true,
-                        type: 'slider'
-                    }
-                ],
-                tooltip: {
-                    trigger: 'axis',
+                    dataZoom: [
+                        {
+                            type: 'inside',
+                            xAxisIndex: [0, 1],
+                            start: 90,
+                            end: 100
+                        },
+                        {
+                            show: true,
+                            type: 'slider',
+                            xAxisIndex: [0, 1]
+                        }
+                    ],
+                    tooltip: {
+                        trigger: 'axis',
+                        axisPointer: {
+                            type: 'cross'
+                        }
+                    },
                     axisPointer: {
-                        type: 'cross'
-                    }
-                },
-                toolbox: {
-                    show: true,
-                    feature: {
-                        dataZoom: {},
-                        restore: {},
-                        saveAsImage: {}
-                    }
-                },
-                series: [{
-                    type: 'candlestick',
-                    data: result.data
-                }]
+                        link: [{xAxisIndex: [0, 1]}]
+                    },
+                    toolbox: {
+                        show: true,
+                        feature: {
+                            dataZoom: {},
+                            restore: {},
+                            saveAsImage: {}
+                        }
+                    },
+                    series: [
+                        {
+                            type: 'candlestick',
+                            data: result.data
+                        },
+                        {
+                            type: 'line',
+                            showSymbol: false,
+                            name: 'MA5',
+                            data: calcMA(result.data, 5)
+                        },
+                        {
+                            type: 'line',
+                            showSymbol: false,
+                            name: 'MA10',
+                            data: calcMA(result.data, 10)
+                        },
+                        {
+                            type: 'line',
+                            showSymbol: false,
+                            name: 'MA20',
+                            data: calcMA(result.data, 20)
+                        },
+                        {
+                            type: 'line',
+                            showSymbol: false,
+                            name: 'MA30',
+                            data: calcMA(result.data, 30)
+                        },
+                        {
+                            type: 'line',
+                            showSymbol: false,
+                            name: 'MA60',
+                            data: calcMA(result.data, 60)
+                        },
+                        {
+                            type: 'bar',
+                            name: '交易量',
+                            xAxisIndex: 1,
+                            yAxisIndex: 1,
+                            data: result.volume
+                        }
+                    ]
+                }
             });
+            var updateInfo = function (index) {
+                stock_info.close = result.data[index][1];
+                stock_info.open = result.data[index][0];
+                stock_info.high = result.data[index][2];
+                stock_info.low = result.data[index][3];
+                if (index > 0) {
+                    stock_info.last = result.data[index - 1][1];
+                    stock_info.rate = (stock_info.close - stock_info.last) / stock_info.last;
+                } else {
+                    stock_info.last = '暂无数据';
+                }
+            };
+            chart.on('datazoom', function (e) {
+                updateInfo(Math.floor(result.dates.length * e.batch[0].end / 100));
+            });
+            updateInfo(result.dates.length - 1);
             chart.hideLoading();
         });
     }, 0);
