--- a/frontend/res/views/home.html
+++ b/frontend/res/views/home.html
@@ -2,8 +2,8 @@
 
 <div class="home">
     <h1>非专业股票分析系统</h1>
-    <h2>我也不知道这里写啥，我也不知道这里写啥</h2>
+    <h2>市场温度计、历史行情、实时行情、对比回测，以及更多</h2>
     <button type="button" class="btn btn-danger" onclick="app.views.load('market');">
-        开始你的摸鱼之旅
+        开始你的股票之旅
     </button>
 </div>
