--- a/frontend/res/views/market.html
+++ b/frontend/res/views/market.html
@@ -117,7 +117,7 @@
         if (app.views.param.date) {
             view_market.date = app.views.param.date;
         } else {
-            view_market.date = app.dates.max;
+            view_market.date = app.index.max_date;
         }
     })();
 </script>
