--- a/frontend/res/views/stocklist.html
+++ b/frontend/res/views/stocklist.html
@@ -78,7 +78,7 @@
         if (app.views.param.date) {
             view_stocklist.date = app.views.param.date;
         } else {
-            view_stocklist.date = app.dates.max;
+            view_stocklist.date = app.index.max_date;
         }
     })();
 </script>
